JumpScript/tests/baselines/reference/restElementWithNullInitializer.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.jump(1,15): error TS2461: Type 'null' is not an array type.
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.jump(4,15): error TS2461: Type 'undefined' is not an array type.
tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.jump(7,15): error TS2461: Type '{}' is not an array type.


==== tests/cases/conformance/es6/destructuring/restElementWithNullInitializer.jump (3 errors) ====
    function foo1([...r] = null) {
                  ~~~~~~
!!! error TS2461: Type 'null' is not an array type.
    }
    
    function foo2([...r] = undefined) {
                  ~~~~~~
!!! error TS2461: Type 'undefined' is not an array type.
    }
    
    function foo3([...r] = {}) {
                  ~~~~~~
!!! error TS2461: Type '{}' is not an array type.
    }
    
    function foo4([...r] = []) {
    }
    